--- a/app/src/main/res/layout/menu_item_switch.xml
+++ b/app/src/main/res/layout/menu_item_switch.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/sw_inner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="8dp" />
 </RelativeLayout>
