--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Theme colors -->
+    <eat-comment />
+    <color name="primaryColor">#FF7043</color>
+    <color name="primaryLightColor">#FFA270</color>
+    <color name="primaryDarkColor">#C63F17</color>
+    <color name="secondaryColor">#4DD0E1</color>
+    <color name="secondaryLightColor">#88FFFF</color>
+    <color name="secondaryDarkColor">#009FAF</color>
 </resources>
