--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.SmsReceiver" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#4C82ED</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/secondaryColor</item>
+        <item name="colorSecondaryVariant">@color/secondaryDarkColor</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- TODO: Change status bar color with better -->
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?colorPrimary</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">?colorPrimaryVariant</item>
     </style>
 </resources>
