--- a/app/src/main/res/menu/menu_app_bar.xml
+++ b/app/src/main/res/menu/menu_app_bar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/app_bar_switch"
+        android:id="@+id/menu_item_1"
         android:title="Switch"
         app:actionLayout="@layout/menu_item_switch"
         app:showAsAction="always" />
