--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="24dp"
+            android:padding="24dp"
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tf_from"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="?textInputOutlinedStyle"
                 android:layout_width="@dimen/text_field_width_default"
                 android:layout_height="wrap_content"
                 android:hint="@string/tf_from_hint"
@@ -36,7 +35,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tf_to"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="?textInputOutlinedStyle"
                 android:layout_width="@dimen/text_field_width_default"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -52,7 +51,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tf_pattern"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="?textInputOutlinedStyle"
                 android:layout_width="@dimen/text_field_width_default"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
