--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         app:defaultNavHost="true" />
+
+    <include layout="@layout/bottom_nav_bar" />
 </LinearLayout>
